--- a/src/admintmpBundle/Resources/views/Default/index.html.twig
+++ b/src/admintmpBundle/Resources/views/Default/index.html.twig
@@ -281,6 +281,77 @@ to get the desired effect
                 </ul>
 
             </nav>
+            <nav class="mt-2">
+                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                    <!-- Add icons to the links using the .nav-icon class
+                         with font-awesome or any other icon font library -->
+                    <li class="nav-item has-treeview menu-open">
+                        <a href="#" class="nav-link active">
+                            <i class="fas fa-dollar-sign"></i>
+                            <p>
+                                publicités payantes
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a href="{{ path('pubext_new') }}" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Ajouter Pub</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{{ path('pubext_index') }}" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Afficher pub</p>
+                                </a>
+                            </li>
+
+
+
+
+
+                        </ul>
+                    </li>
+                </ul>
+
+            </nav>
+            <nav class="mt-2">
+                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                    <!-- Add icons to the links using the .nav-icon class
+                         with font-awesome or any other icon font library -->
+                    <li class="nav-item has-treeview menu-open">
+                        <a href="#" class="nav-link active">
+                            <i class="fas fa-chart-line"></i>
+                            <i class="fas fa-dollar-sign"></i>
+                            <p>
+                                publicités des produits/annonces
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a href="{{ path('pubint_new') }}" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Ajouter Pub</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{{ path('pubext_index') }}" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Afficher pub</p>
+                                </a>
+                            </li>
+
+
+
+
+
+                        </ul>
+                    </li>
+                </ul>
+
+            </nav>
 
 
         </div>
