--- a/app/Resources/views/pubext/new.html.twig
+++ b/app/Resources/views/pubext/new.html.twig
@@ -1,16 +1,42 @@
-{% extends 'base.html.twig' %}
+{% extends '@admintmp/Default/index.html.twig' %}
 
 {% block body %}
-    <h1>Pubext creation</h1>
+    <form role="form" action="{{ path('pubext_new') }}" method="post">
+        <h2 class="form-title">Ajout des pubs payantes</h2>
+        <div class="card-body">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Nom Pub</label>
+                <div>
+                    {{ form_widget(form.nompubext, { 'attr': {'class': 'form-control', 'placeholder': 'Nom Categorie','type':'text','name':'name','id':'nom_cat' } }) }}                    </div>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">date debut</label>
+                <div>
+                    {{ form_widget(form.datedebutpubext, { 'attr': {'class': 'form-control', 'placeholder': 'Description','type':'text','name':'name','id':'desc' } }) }}                    </div>
 
-    <ul>
-        <li>
-            <a href="{{ path('pubext_index') }}">Back to the list</a>
-        </li>
-    </ul>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">date exp</label>
+                <div>
+                    {{ form_widget(form.dateexppubext, { 'attr': {'class': 'form-control', 'placeholder': 'Description','type':'text','name':'name','id':'desc' } }) }}                    </div>
+
+            </div>
+
+
+        </div>
+        <!-- /.card-body -->
+        {{ form_rest(form) }}
+        <div class="card-footer">
+            <ul>
+                <button type="submit" class="btn btn-primary">Create</button>
+            </ul>
+            <ul>
+                <li><h4>
+                        <a href="{{ path('pubext_index') }}" class="-address-book">Back to the list</a>
+                    </h4>
+                </li>
+            </ul>
+        </div>
+    </form>
 {% endblock %}
