--- a/app/Resources/views/pubint/index.html.twig
+++ b/app/Resources/views/pubint/index.html.twig
@@ -1,9 +1,12 @@
-{% extends 'base.html.twig' %}
-
+{% extends '@admintmp/Default/index.html.twig' %}
 {% block body %}
     <h1>Pubints list</h1>
-
-    <table>
+<div class="cart-box-main">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="table-main table-responsive">
+    <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
@@ -34,6 +37,8 @@
         {% endfor %}
         </tbody>
     </table>
+    </div>
+            </div></div></div></div>
 
     <ul>
         <li>
