--- a/app/Resources/views/pubint/show.html.twig
+++ b/app/Resources/views/pubint/show.html.twig
@@ -1,26 +1,27 @@
-{% extends 'base.html.twig' %}
-
+{% extends '@admintmp/Default/index.html.twig' %}
 {% block body %}
     <h1>Pubint</h1>
 
-    <table>
+
+
+    <table class="table table-dark">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Nom</th>
+            <th scope="col">Datedebutpubint</th>
+            <th scope="col">Dateexppubint</th>
+        </tr>
+        </thead>
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ pubint.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ pubint.nom }}</td>
-            </tr>
-            <tr>
-                <th>Datedebutpubint</th>
-                <td>{% if pubint.datedebutpubint %}{{ pubint.datedebutpubint|date('Y-m-d') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Dateexppubint</th>
-                <td>{% if pubint.dateexppubint %}{{ pubint.dateexppubint|date('Y-m-d') }}{% endif %}</td>
-            </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>{{ pubint.nom }}</td>
+            <td>{% if pubint.datedebutpubint %}{{ pubint.datedebutpubint|date('Y-m-d') }}{% endif %}</td>
+            <td>{% if pubint.dateexppubint %}{{ pubint.dateexppubint|date('Y-m-d') }}{% endif %}</td>
+
+        </tr>
+
         </tbody>
     </table>
 
@@ -37,4 +38,44 @@
             {{ form_end(delete_form) }}
         </li>
     </ul>
+{% endblock %}
+{% block content %}
+
+    <div class="all-title-box">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Pubint</h2>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <center>
+        <h1>Liste des Pubs</h1>
+        <br><br>
+
+        {% for res in res %}
+            <ul>
+
+                <table border="2">
+                    <tr>
+                        <td>
+                            Objet : {{ res.Objet }}<br>
+                            Text : {{ res.text }}<br>
+                            Type : {{ res.type }}<br>
+                            Etat :{{ res.etat }}<br>
+                            Date : {{ res.date|date() }}<br>
+                            <br>
+                            <br>
+                        <td>
+                            <a href="{{url('pubint_delete',{'id': res.id })}}"> <button> Delete </button></a> <br>
+                        </td>
+                    </tr>
+                </table>
+            </ul>
+        {% endfor %}
+
+    </center>
 {% endblock %}
