--- a/src/admintmpBundle/Resources/views/Default/index.html.twig
+++ b/src/admintmpBundle/Resources/views/Default/index.html.twig
@@ -337,7 +337,7 @@ to get the desired effect
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="{{ path('pubext_index') }}" class="nav-link">
+                                <a href="{{ path('pubint_index') }}" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Afficher pub</p>
                                 </a>
