--- a/app/Resources/views/pubext/show.html.twig
+++ b/app/Resources/views/pubext/show.html.twig
@@ -1,26 +1,31 @@
 {% extends '@admintmp/Default/index.html.twig' %}
 
 {% block body %}
-    <h1>Pubext</h1>
+    <h1>Publicités Payantes</h1>
 
-    <table>
+
+
+    <table class="table table-dark">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Nom</th>
+            <th scope="col">Date debut pub</th>
+            <th scope="col">Date exp pub</th>
+            <th scope="col">Symbol</th>
+        </tr>
+        </thead>
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ pubext.id }}</td>
-            </tr>
-            <tr>
-                <th>Nompubext</th>
-                <td>{{ pubext.nompubext }}</td>
-            </tr>
-            <tr>
-                <th>Datedebutpubext</th>
-                <td>{{ pubext.datedebutpubext }}</td>
-            </tr>
-            <tr>
-                <th>Dateexppubext</th>
-                <td>{{ pubext.dateexppubext }}</td>
-            </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>{{ pubext.nompubext }}</td>
+            <td>{% if pubext.datedebutpubext %}{{ pubext.datedebutpubext|date('Y-m-d') }}{% endif %}</td>
+            <td>{% if pubext.dateexppubext %}{{ pubext.dateexppubext|date('Y-m-d') }}{% endif %}</td>
+            <td><img src=" {{ pubext.displayPhoto }} " class="card-img-top" alt="Deal's photo"></td>
+
+
+        </tr>
+
         </tbody>
     </table>
 
@@ -33,8 +38,9 @@
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+            <input type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
     </ul>
 {% endblock %}
+
