--- a/app/Resources/views/pubint/index.html.twig
+++ b/app/Resources/views/pubint/index.html.twig
@@ -6,14 +6,14 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="table-main table-responsive">
-    <table class="table">
-        <thead>
-            <tr>
+                    <table class="table table-dark">
+                        <thead class="thead-dark">
                 <th>Id</th>
                 <th>Nom</th>
                 <th>Datedebutpubint</th>
                 <th>Dateexppubint</th>
                 <th>Actions</th>
+
             </tr>
         </thead>
         <tbody>
@@ -30,6 +30,14 @@
                         </li>
                         <li>
                             <a href="{{ path('pubint_edit', { 'id': pubint.id }) }}">edit</a>
+                        </li>
+                        <li>
+                            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"><i class="fab fa-facebook-f"></i>
+
+                                </a></div>
+                        </li>
+                        <li>
+                            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="small"><a href="https://twitter.com/intent/tweet?screen_name=TwitterDev&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
                         </li>
                     </ul>
                 </td>
