implementation du Pinterest

--- a/app/Resources/views/pubint/index.html.twig
+++ b/app/Resources/views/pubint/index.html.twig
@@ -37,7 +37,11 @@
                                 </a></div>
                         </li>
                         <li>
-                            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="small"><a href="https://twitter.com/intent/tweet?screen_name=TwitterDev&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+                            <div class="twitter-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="small"><a href="https://twitter.com/intent/tweet?screen_name=TwitterDev&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+                        </li>
+                        <li>
+                            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="small"><a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark">
+                                    <i class="fab fa-pinterest"></i></a></div>
                         </li>
                     </ul>
                 </td>
