--- a/app/Resources/views/pubext/index.html.twig
+++ b/app/Resources/views/pubext/index.html.twig
@@ -23,7 +23,9 @@
                 <td>{{ pubext.nompubext }}</td>
                 <td>{{ pubext.datedebutpubext|date('Y-m-d') }}</td>
                 <td>{{ pubext.dateexppubext|date('Y-m-d') }}</td>
-               <td> <img src="{{ asset('/Integrationpublic/uploads/')~pubext.photo}}" width="100px"></td>
+               <td>
+                <img src="{{ asset('/Integration/publichamidou/uploaldshamidou/')~ pubext.photo}}" width="100px">
+               </td>
                 <td>
                     <ul>
 
