--- a/app/Resources/views/pubint/index.html.twig
+++ b/app/Resources/views/pubint/index.html.twig
@@ -12,7 +12,9 @@
                 <th>Nom</th>
                 <th>Datedebutpubint</th>
                 <th>Dateexppubint</th>
+                <th>Photo</th>
                 <th>Actions</th>
+                <th>Symbol</th>
 
             </tr>
         </thead>
@@ -23,6 +25,7 @@
                 <td>{{ pubint.nom }}</td>
                 <td>{% if pubint.datedebutpubint %}{{ pubint.datedebutpubint|date('Y-m-d') }}{% endif %}</td>
                 <td>{% if pubint.dateexppubint %}{{ pubint.dateexppubint|date('Y-m-d') }}{% endif %}</td>
+                <td> <img src="{{ asset('/Integration/publichamidou/uploaldshamidou/') ~ pubint.photo}}" width="100px"></td>
                 <td>
                     <ul>
                         <li>
